--- a/src/view/frontend/templates/customer/address/openkvk.phtml
+++ b/src/view/frontend/templates/customer/address/openkvk.phtml
@@ -51,12 +51,12 @@ use Magento\Framework\Escaper;
 
         <div class="bg-black bg-opacity-60 fixed inset-0 z-40" x-cloak
              :class="{'hidden': open === false}"
-             @keydown.window.escape="closeSuggestions()">
-            <div class="bg-white fixed w-1/4 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rounded-md max-h-10/12 overflow-y-scroll"
-                 @click.away="closeSuggestions()">
+             @keydown.window.escape="open = false;">
+            <div class="bg-white fixed w-1/4 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rounded-md max-h-10/12 overflow-y-auto"
+                 @click.away="open = false;">
                 <div class="p-3 font-bold border-b-1 flex justify-between items-center">
                     <?= $escaper->escapeHtml(__('Found Companies')) ?>
-                    <a href="javascript:void(0)" x-on:click="closeSuggestions()">
+                    <a href="javascript:void(0)" x-on:click="open = false;">
                         <svg class="icon fill-current h-6 w-6 ml-auto cursor-pointer">
                             <use xlink:href="<?= $block->escapeUrl($block->getViewFileUrl('/images/sprite.svg#icon-cross')) ?>"></use>
                         </svg>
